Wed Mar 20 22:48:51 1996  Theodore Y. Ts'o  <tytso@dcl>

	* fcc-proto.h (krb5_fcc_skip_header): Added prototype (fix Windows
		lint flames).

Sat Feb 24 19:16:23 1996  Theodore Y. Ts'o  <tytso@dcl>

	* fcc_destry.c (krb5_fcc_destroy): For MS-DOS filesystems, you
		must close the file before unlinking it, otherwise the
		unlink() will fail.

Thu Feb 15 14:55:56 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* fcc_skip.c (krb5_fcc_skip_header): If version is not FVNO_4, do not
		seek forward a random stack value.

Thu Feb  1 15:45:23 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* fcc_retrv.c (ktype_reasonable): removed.
	(krb5_fcc_retrieve): Accept any enctype unless specific enctype is
		being matched. 

Wed Jan 24 21:36:34 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* fcc_retrv.c (ktype_reasonable): Renamed ktype_match because it
        didn't really match enctypes.  Instead, it just determined whether
        they were something the TGS would likely return.  When I ask for
        an exact enctype match, I want an enctype match.
	(krb5_fcc_retrieve): Match keytype exactly if matching enctype.

Wed Jan 10 21:14:31 1996  Theodore Y. Ts'o  <tytso@dcl>

	* fcc.h (KRB5_FCC_DEFAULT_VNO): Remove KRB5_FCC_DEFAULT_VNO; now
		set in init_ctx.c.

	* fcc_maybe.c (krb5_fcc_open_file): 
	* fcc_gennew.c (krb5_fcc_generate_new): Use
		context->fcc_default_format to determine the credentials
		cache type.

	* fcc_read.c (krb5_fcc_read_keyblock): If reading in a version 3
		credentials cache, ignore the second enctype stored in the
		ccache; just read it into a dummy variable.

Thu Dec 21 18:28:09 1995  Theodore Y. Ts'o  <tytso@dcl>

	* fcc_maybe.c (krb5_fcc_open_file): In the case of
		FCC_OPEN_AND_ERASE, unlink the old filename, and then add
		the O_EXCL open flag, to prevent O_CREAT from following a
		symbolic link.
		(krb5_fcc_open_file): Use KRB5_CC_FORMAT as an error code
		instead of KRB5_CCACHE_BADVNO, when it's really a format