@@ -214,8 +214,12 @@ krb5_fcc_read_keyblock(context, id, keyblock)
 
      kret = krb5_fcc_read_int32(context, id, &int32);
      CHECK(kret);
+#ifdef _WINDOWS
+     int32 &= VALID_INT_BITS;    /* Gradient does not write  correctly */     
+#else
      if ((int32 & VALID_INT_BITS) != int32)     /* Overflow size_t??? */
 	  return KRB5_CC_NOMEM;
+#endif
      keyblock->length = (int) int32;
      if ( keyblock->length == 0 )
 	     return KRB5_OK;
@@ -249,8 +253,12 @@ krb5_fcc_read_data(context, id, data)
 
      kret = krb5_fcc_read_int32(context, id, &len);
      CHECK(kret);
+#ifdef _WINDOWS
+     len &= VALID_INT_BITS;
+#else
      if ((len & VALID_INT_BITS) != len)
         return KRB5_CC_NOMEM;
+#endif
      data->length = (int) len;
 
      if (data->length == 0) {
@@ -292,8 +300,12 @@ krb5_fcc_read_addr(context, id, addr)
      
      kret = krb5_fcc_read_int32(context, id, &int32);
      CHECK(kret);
+#ifdef _WINDOWS
+     int32 &= VALID_INT_BITS;	/* Gradient DCE does this wrong */
+#else
      if ((int32 & VALID_INT_BITS) != int32)     /* Overflow int??? */
 	  return KRB5_CC_NOMEM;
+#endif
      addr->length = (int) int32;
 
      if (addr->length == 0)
@@ -471,8 +483,12 @@ krb5_fcc_read_authdatum(context, id, a)
     a->ad_type = (krb5_authdatatype)ui2;
     kret = krb5_fcc_read_int32(context, id, &int32);
     CHECK(kret);
+#ifdef _WINDOWS
+    int32 &= VALID_INT_BITS;
+#else
     if ((int32 & VALID_INT_BITS) != int32)     /* Overflow int??? */
           return KRB5_CC_NOMEM;
+#endif
     a->length = (int) int32;
     
     if (a->length == 0 )
