@@ -208,6 +208,12 @@ krb5_scc_read_keyblock(context, id, keyblock)
 
      kret = krb5_scc_read_int32(context, id, &int32);
      CHECK(kret);
+#ifdef _WINDOWS
+     int32 &= VALID_INT_BITS;    /* Gradient does not write  correctly */     
+#else
+     if ((int32 & VALID_INT_BITS) != int32)     /* Overflow size_t??? */
+	  return KRB5_CC_NOMEM;
+#endif
      keyblock->length = int32;
      if ( keyblock->length == 0 )
 	     return KRB5_OK;
@@ -234,12 +240,20 @@ krb5_scc_read_data(context, id, data)
    krb5_data *data;
 {
      krb5_error_code kret;
+     krb5_int32 len;
 
      data->magic = KV5M_DATA;
      data->data = 0;
 
-     kret = krb5_scc_read_int32(context, id, &data->length);
+     kret = krb5_scc_read_int32(context, id, &len);
      CHECK(kret);
+#ifdef _WINDOWS
+     len &= VALID_INT_BITS;
+#else
+     if ((len & VALID_INT_BITS) != len)
+        return KRB5_CC_NOMEM;
+#endif
+     data->length = (int) len;
 
      if (data->length == 0) {
 	data->data = 0;
@@ -280,6 +294,12 @@ krb5_scc_read_addr(context, id, addr)
      
      kret = krb5_scc_read_int32(context, id, &int32);
      CHECK(kret);
+#ifdef _WINDOWS
+     int32 &= VALID_INT_BITS;	/* Gradient DCE does this wrong */
+#else
+     if ((int32 & VALID_INT_BITS) != int32)     /* Overflow int??? */
+	  return KRB5_CC_NOMEM;
+#endif
      addr->length = int32;
 
      if (addr->length == 0)
@@ -449,6 +469,12 @@ krb5_scc_read_authdatum(context, id, a)
     a->ad_type = (krb5_authdatatype)ui2;
     kret = krb5_scc_read_int32(context, id, &int32);
     CHECK(kret);
+#ifdef _WINDOWS
+    int32 &= VALID_INT_BITS;
+#else
+    if ((int32 & VALID_INT_BITS) != int32)     /* Overflow int??? */
+          return KRB5_CC_NOMEM;
+#endif
     a->length = int32;
     
     if (a->length == 0 )
